hphp/hack/test/typecheck/argument_unpacking/unpack_call4.php.exp
File "unpack_call4.php", line 8, characters 18-22:
A function that receives an unpacked array as an argument must have a variadic parameter to accept the elements of the array (Typing[4359])
File "unpack_call4.php", line 3, characters 10-10:
Definition is here
