hphp/hack/test/typecheck/argument_unpacking/unpack_call4.php
<?hh // partial

function f(string $foo): void {}

function test(): void {
  $args = varray[];
  // arity error
  f('string', ...$args);
}
